java upgrade changes